[gd_scene load_steps=7 format=3 uid="uid://cdjxmb4meemc1"]

[ext_resource type="PackedScene" uid="uid://dsjl0hc5gc6nw" path="res://resources/assets/characters/GLTF/Astronaut_FernandoTheFlamingo.gltf" id="1_18jq4"]
[ext_resource type="Script" path="res://scenes/player_selection_screen.gd" id="1_ss3t2"]
[ext_resource type="PackedScene" uid="uid://2pooj6agqxc0" path="res://resources/assets/characters/GLTF/Astronaut_BarbaraTheBee.gltf" id="2_gby2d"]
[ext_resource type="PackedScene" uid="uid://bqy4oyxvyawu" path="res://resources/assets/characters/GLTF/Astronaut_FinnTheFrog.gltf" id="3_jesj4"]
[ext_resource type="PackedScene" uid="uid://chilf0jbc7mnk" path="res://resources/assets/characters/GLTF/Astronaut_RaeTheRedPanda.gltf" id="4_jcyde"]

[sub_resource type="Environment" id="Environment_swwl4"]
background_mode = 1
background_color = Color(0, 0, 0.388235, 1)

[node name="PlayerSelectionScreen" type="Node3D"]
script = ExtResource("1_ss3t2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -6.97574e-16, 6.97574e-16, 6.97574e-16, 1, -6.97574e-16, -6.97574e-16, 6.97574e-16, 1, 2.08234e-12, 2, 4)
environment = SubResource("Environment_swwl4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, -0.694135, 0.540887, 0.450034)

[node name="Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00642574, 3.62163, 0.0060147)

[node name="Avatar1" parent="." instance=ExtResource("1_18jq4")]
transform = Transform3D(1, -6.97574e-16, 6.97574e-16, 6.97574e-16, 1, -6.97574e-16, -6.97574e-16, 6.97574e-16, 1, 0, 0, 0)
visible = false

[node name="Avatar2" parent="." instance=ExtResource("3_jesj4")]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
visible = false

[node name="Avatar3" parent="." instance=ExtResource("2_gby2d")]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
visible = false

[node name="Avatar4" parent="." instance=ExtResource("4_jcyde")]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
visible = false
